--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0.csproj
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0.csproj
@@ -53,6 +53,7 @@
     <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.39\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -76,6 +77,15 @@
     <Compile Include="AdminUC.xaml.cs">
       <DependentUpon>AdminUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DetailsDataCus.xaml.cs">
+      <DependentUpon>DetailsDataCus.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DetailsDataR.xaml.cs">
+      <DependentUpon>DetailsDataR.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DetailsDataV.xaml.cs">
+      <DependentUpon>DetailsDataV.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DetailsUC.xaml.cs">
       <DependentUpon>DetailsUC.xaml</DependentUpon>
     </Compile>
@@ -90,6 +100,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="BookingsUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DetailsDataCus.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DetailsDataR.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DetailsDataV.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -164,6 +186,7 @@
     <Resource Include="Resources\Background.png" />
     <Resource Include="Background.png" />
     <Resource Include="Icon.png" />
+    <Resource Include="search icon new.png" />
     <Content Include="VehicleRentalDB.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
