--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0.csproj
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0.csproj
@@ -128,6 +128,7 @@
     <Compile Include="ManageVehicleFor.xaml.cs">
       <DependentUpon>ManageVehicleFor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ReceiptGenarator.cs" />
     <Compile Include="RentalForms.xaml.cs">
       <DependentUpon>RentalForms.xaml</DependentUpon>
     </Compile>
