--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0.csproj
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0.csproj
@@ -129,6 +129,9 @@
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Manage Employee.xaml.cs">
+      <DependentUpon>Manage Employee.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ManageDriverForm.xaml.cs">
       <DependentUpon>ManageDriverForm.xaml</DependentUpon>
     </Compile>
@@ -213,6 +216,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Manage Employee.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ManageDriverForm.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
